# Alquiler_dptos

./: main.py  pyproject.toml
.agents/skills/Automatizar_excel/: SKILL.md
.agents/skills/Automatizar_excel/references/: excel_openpyxl.md  fastapi_excel.md  pandas_pymes.md  scheduler.md
.agents/skills/dashboard-hospedaje/: SKILL.md
.agents/skills/dashboard-hospedaje/references/: dashboard_plotly.md  metrics.md  pdf_reportlab.md  sheets_loader.md
dashboard-hospedaje/: .gitignore  config.py  main.py  requirements.txt  test_sheet.py
dashboard-hospedaje/src/: dashboard.py  metrics.py  pdf_report.py  sheets_loader.py
registro_alquileres/: README.md  main.py  requirements.txt  test_optional.py  test_script.py
registro_alquileres/data/: registros.xlsx
registro_alquileres/templates/: index.html
