[project]
name = "automatizacion-excel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "google-auth>=2.49.1",
    "gspread>=6.2.1",
    "jinja2>=3.1.6",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
]
